@@ -98,7 +98,7 @@ YASM_VER=1.3.0
 # OPENSSL_VER=1.0.1f
 OPENSSL_VER=1.0.2j
 OPENSSL_SUBVER=${OPENSSL_VER}
-LIBGPG_ERROR_VER=1.23
+LIBGPG_ERROR_VER=1.25
 LIBGCRYPT_VER=1.7.1
 
 # HARFBUZZ_VER=0.9.27
