@@ -7,6 +7,7 @@
   - JPEG_TURBO_VER from 1.5.0 to 1.5.1
   - TIFF_VER from 4.0.6 to 4.0.7
   - OPENSSL_VER from 1.0.2h to 1.0.2j
+  - LIBGPG_ERROR_VER from 1.23 to 1.25
 
 --- v2.0 (2016-07-12) ---
 * Add Makefile as a proxy for shell script make.sh.
